--- a/project.yaml
+++ b/project.yaml
@@ -1,4 +1,14 @@
 targets:
+  hirsute:
+    package_extension:
+      deb
+    architectures:
+      x86_64:
+        test_distros:
+          representative:
+          - ubuntu-os-cloud:ubuntu-2104
+          exhaustive:
+          - ubuntu-os-cloud:ubuntu-minimal-2104
   oracular:
     package_extension:
       deb
